<resources>
    <string name="app_name">tutorial3</string>
    <string name="Label1">Welcome to</string>
    <string name="Label2">Daily Motivation</string>
    <string name="Label3">Quotes</string>
    <string name="Label4">Ready To Get Motivated?</string>
    <string name="Get_Started_Button">Get Started</string>
    <string name="Login">LOGIN</string>
    <string name="Register">REGISTER</string>
    <string name="CreateAccount">Create an Account</string>
    <string name="description">description</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">E-mail</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="passwordDescription">Password should be include minimum 8 characters including lower and upper cases</string>
    <string name="register">Register</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="dontHaveAnAccount">Dont have an account?<color name="blue" /> Sign-Up now!</string>
    <string name="signUpNow">Sign-Up now!</string>
    <string name="whatMotivatesYou">What motivates you to take action in your daily life?</string>

    <string name="rateTheImpact">How would you
        rate the impact of motivational quotes on your daily life?</string>
    <string name="achieving">Achieving Milestones and Goals</string>
    <string name="stringRelationships">Building Strong Relationships</string>
    <string name="metalWellBeing">Improving Mental Well-being</string>
    <string name="physicalHealth">Maintaining Physical Health</string>
    <string name="high">High</string>
    <string name="moderate">Moderate</string>
    <string name="low">Low</string>
    <string name="noImpact">No-Impact</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="mptivation">Daily Motivation Quotes</string>
    <string name="title_activity_page7">page7</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="scroll" />
    <string name="name">Name</string>
    <string name="shashiranperera">Shashiran Perera</string>
    <string name="shashiemail">shashi@gmail.com</string>
    <string name="PASSWORD">Password</string>
    <string name="qqqqq">q12345rew</string>
    <string name="gender">Male</string>
    <string name="Gender">Gender</string>
    <string name="birthYear">Birth Year</string>
    <string name="Date">24/11/2024</string>
    <string name="country">Country/Region</string>
    <string name="sriLanka">Sri Lanka</string>
    <string name="logOut">Log Out</string>
    <string name="donthaveAnAccount">Dont have An Account?</string>


</resources>