<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorpage4"
    android:orientation="vertical"
    tools:context=".page6">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="120dp"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/rateTheImpact" />

    <RadioGroup
        android:layout_width="390dp"
        android:layout_height="359dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/high"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/moderate"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/low"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/noImpact"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/button40"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF6E40"
        android:textColor="#000000"
        android:text="@string/done"
        android:textSize="24sp" />


</LinearLayout>