<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorpage4"
    android:orientation="vertical"
    tools:context=".page4">


    <androidx.cardview.widget.CardView
        android:layout_width="294dp"
        android:layout_height="370dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="120dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="32dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="100dp"

            app:srcCompat="@drawable/field" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="93dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="170dp"
            app:srcCompat="@drawable/field" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="163dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/button21"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="#064374"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="236dp"
            android:layout_height="34dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="270dp"
            android:text="@string/donthaveAnAccount"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="82dp"
            android:layout_marginTop="290dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/signUpNow"
            android:textColor="#0055FF" />

    </androidx.cardview.widget.CardView>


</LinearLayout>